# Muse

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md
backend/: .coverage 2  .coverage 3  .env.example  README.md  alembic.ini  pyproject.toml
backend/migrations/: README  env.py
backend/migrations/versions/: 20260715_0001_initial_schema.py  20260715_0002_garment_import_processing.py  20260715_0003_phone_upload_sessions.py
backend/src/muse_backend/: __init__.py  application.py  cli.py  config.py  frontend.py  main.py
backend/src/muse_backend/api/: dependencies.py  errors.py
backend/src/muse_backend/database/: __init__.py  base.py  engine.py  migrations.py
backend/src/muse_backend/domain/: __init__.py  enums.py  exceptions.py  validation.py
backend/src/muse_backend/middleware/: __init__.py  device_action.py  request_id.py  security.py  settings_security.py
backend/src/muse_backend/phone_upload/: __init__.py  application.py  security.py  static.py
backend/src/muse_backend/platform/: __init__.py  contracts.py  local.py
backend/src/muse_backend/repositories/: __init__.py  clothing.py  outfits.py  settings.py
backend/src/muse_backend/schemas/: __init__.py  clothing.py  common.py  outfit.py  phone_upload.py  settings.py
backend/src/muse_backend/services/: __init__.py  application_settings.py  background_processing.py  backups.py  clothing.py  device_control.py  garment_import_workflow.py  image_processing.py  images.py  import_admission.py  imports.py  lan_address.py  maintenance.py  (+10 more)
backend/tests/: __init__.py  conftest.py  support.py  test_backups_and_maintenance.py  test_clothing_api.py  test_config_database.py  test_garment_import.py  test_images_and_media.py  test_import_migration.py  test_kiosk_deployment.py  test_outfit_preview_renderer.py  test_outfit_previews_api.py  test_outfits_api.py  test_phone_upload.py  test_phone_upload_cleanup.py  test_phone_upload_listener_probe.py  test_production_frontend.py  test_settings_api.py  test_storage.py  test_system_api.py
(+225 files in other folders)
